menu-bar 작업 진행중 - 메뉴바 기본 정렬 완료
필요 작업
- 메뉴바 그라데이션 작업
- 마우스 오버 시, 투명도 조절
- 스프라이트를 이용한 이미지 적용

--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
 </head>
 <body>
     <header>
-<!--        <span>Netflix</span>-->
-<!--        <span>홈</span>-->
-<!--        <span>TV 프로그램</span>-->
-<!--        <span>영화</span>-->
-<!--        <span>NEW! 요즘 대세 콘텐츠</span>-->
-<!--        <span>내가 찜한 컨텐츠</span>-->
-
-        <ul id = "primary-menu">
-            <li><a href="./index.html"><img src="_image/logo.png" width="92.5px", height="25px" /></a></li>
+        <ui id="logo">
+            <li><a href="./index.html"><img src="_image/logo.png" width="92.5px" height="25px" /></a></li>
+        </ui>
+        <ul id="primary-menu">
+<!--            <li><a href="./index.html"><img src="_image/logo.png" width="92.5px", height="25px" /></a></li>-->
             <li>홈</li>
             <li>Tv 프로그램</li>
             <li> 영화 </li>
-            <li>New! 요즘 대새 컨텐츠</li>
+            <li>NEW! 요즘 대새 컨텐츠</li>
             <li>내가 찜한 컨텐츠</li>
         </ul>
         <ul id = "secondary-menu">
