menu-bar 작업 진행중  - 그라데이션 적용  - a 링크 기본값 제거  - netflix icon 적용
필요 작업
 - 프로필 이미지 적용
 - 본문 작업 수행
 - 하단 필요 컨텐츠 구성

--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
             <li><a href="./index.html"><img src="_image/logo.png" width="92.5px" height="25px" /></a></li>
         </ui>
         <ul id="primary-menu">
-<!--            <li><a href="./index.html"><img src="_image/logo.png" width="92.5px", height="25px" /></a></li>-->
-            <li>홈</li>
-            <li>Tv 프로그램</li>
-            <li> 영화 </li>
-            <li>NEW! 요즘 대새 컨텐츠</li>
-            <li>내가 찜한 컨텐츠</li>
+            <li><a href="./index.html"> 홈 </a></li>
+            <li><a href="./home.html"> Tv 프로그램 </a></li>
+            <li><a href="./movie.html"> 영화 </a></li>
+            <li><a href="./recommand.html">NEW! 요즘 대새 컨텐츠</a></li>
+            <li><a href="my_conetent.html">내가 찜한 컨텐츠</a></li>
         </ul>
         <ul id = "secondary-menu">
-            <li></li>
+            <li id="search"></li>
             <li>키즈</li>
-            <li>Bell</li>
+            <li id="alarm"></li>
             <li id="user-icon"></li>
         </ul>
 
     </header>
+    <body>
 
+    </body>
 </body>
 </html>
