Django 프로젝트 기본 폴더 구성

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <ui id="logo">
+        <ul id="logo">
             <li><a href="./index.html"><img src="../_image/logo.png" width="92.5px" height="25px" /></a></li>
-        </ui>
+        </ul>
         <ul id="primary-menu">
             <li><a href="./index.html"> 홈 </a></li>
             <li><a href="./home.html"> Tv 프로그램 </a></li>
@@ -28,8 +28,5 @@
         </ul>
 
     </header>
-    <body>
-
-    </body>
 </body>
-</html>
+</html>:
